--- a/main.css
+++ b/main.css
@@ -1,6 +1,13 @@
-.main__block1 {
+.main {
   position: relative;
-  bottom: 200px;
+  width: 1300px;
+  height: 3115px;
+  margin: auto;
+}
+.main__block1 {
+  position: absolute;
+  margin: auto;
+  top: -200px;
   height: 800px;
 }
 
@@ -17,6 +24,7 @@
   font-weight: 700;
   font-size: 40px;
   width: 1026px;
+  bottom: 200px;
   height: 50px;
   margin: auto;
   margin-bottom: 15px;
@@ -39,8 +47,8 @@
 
 .main__block2 {
   height: 900px;
-  position: relative;
-  bottom: 220px;
+  position: absolute;
+  top: 581px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -78,4 +86,108 @@
   width: 260px;
   height: 56px;
   text-align: center;
+}
+
+.main__block3 {
+  height: 1200px;
+  position: absolute;
+  top: 1461px;
+  font-family: "Roboto", sans-serif;
+}
+
+.outside__block3 {
+  background-color: #f4d0d9;
+  border-radius: 1%;
+  box-sizing: border-box;
+  padding-top: 65px;
+  font-family: "Roboto", sans-serif;
+}
+
+.block3__main-text {
+  margin: auto;
+  font-size: 36px;
+  font-weight: 700;
+  width: 316px;
+  height: 35px;
+  margin-bottom: 45px;
+}
+
+.block3__description-text {
+  width: 780px;
+  height: 81px;
+  margin: auto;
+  font-size: 30px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.block3__image {
+  margin-bottom: 75px;
+}
+
+.block3__button {
+  width: 596px;
+  height: 135px;
+  border: none;
+  background: url(./img/mainPage/main_button.png);
+  color: #000;
+  font-size: 36px;
+  font-weight: 700;
+  display: inline-block;
+  margin-left: 316px;
+}
+
+.main__block4 {
+  height: 470px;
+  position: absolute;
+  top: 2645px;
+  font-family: "Roboto", sans-serif;
+  z-index: 1000;
+}
+
+.outside__block4 {
+  background-color: #f50058;
+  border-radius: 1%;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+.block4__contact-info {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 90px;
+  padding-right: 200px;
+  padding-left: 200px;
+}
+
+.block4__icon {
+  width: 100px;
+  height: 100px;
+}
+
+.contact-info-block {
+  width: 300px;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.block4__text1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.block4__text2 {
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+}
+
+@media only screen and (max-width: 1290px) {
+  .main__block1 {
+    display: none;
+  }
 }
