--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
   justify-content: space-between;
 }
 
-.header__logo-name {
+.logo-name {
   display: flex;
   font-size: 40px;
   color: #fff;
@@ -65,12 +65,12 @@ body {
   margin-top: 80px;
 }
 
-.header__logo-image {
+.logo-image {
   width: 97px;
   height: 88px;
 }
 
-.header__name {
+.name {
   position: relative;
   right: 25px;
   top: 5px;
@@ -78,4 +78,56 @@ body {
 
 .inside__container {
   width: 1212px;
+}
+
+.footer {
+  background: #c80c50;
+  width: 100%;
+  height: 280px;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 100;
+  border-radius: 1%;
+  font-family: "Roboto Mono", monospace;
+  position: absolute;
+  top: 3355px;
+}
+
+.footer__container {
+  display: flex;
+  width: 1212px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__social-icons {
+  width: 140px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+.footer__links {
+  width: 491px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+.footer__link {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer__logo-name {
+  width: 255px;
+  height: 88px;
+  margin: 0;
+  margin-top: 100px;
+}
+.header__hidden-menu {
+  display: none;
+}
+
+@media only screen and (max-width: 1290px) {
 }
