--- a/main.css
+++ b/main.css
@@ -186,8 +186,285 @@
   text-align: center;
 }
 
+.buy-img2 {
+  display: none;
+}
+.buy-img {
+  display: block;
+}
+
+.block3__image {
+  display: block;
+}
+
+.block3__image2 {
+  display: none;
+}
+
 @media only screen and (max-width: 1290px) {
+  .main {
+    width: 720px;
+    height: 3853px;
+    margin: auto;
+  }
   .main__block1 {
+    top: -50px;
+    height: 550px;
+  }
+
+  .outside__block1 {
+    padding-top: 25px;
+  }
+
+  .block1__main-text {
+    font-size: 30px;
+    width: 472px;
+    height: 65px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .block1__description-text {
+    font-size: 24px;
+    width: 461px;
+    height: 78px;
+    margin-bottom: 20px;
+  }
+
+  .block1__main-image {
+    width: 654px;
+    height: 400px;
+  }
+  .main__block2 {
+    height: 1820px;
+    top: 493px;
+  }
+
+  .outside__block2 {
+    padding-top: 117px;
+  }
+
+  .block2__main-text {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .block2__buy-options {
+    margin: auto;
+    flex-direction: column;
+    align-items: center;
+    height: 1578px;
+  }
+  .buy-img2 {
+    display: block;
+  }
+  .buy-img {
     display: none;
+  }
+
+  .block2__buy-item {
+    width: 654px;
+    height: 496px;
+    justify-content: space-between;
+  }
+
+  .buy-description {
+    width: 280px;
+    height: 70px;
+    font-size: 28px;
+  }
+
+  .main__block3 {
+    height: 840px;
+    top: 2290px;
+  }
+
+  .outside__block3 {
+    padding-top: 40px;
+  }
+
+  .block3__main-text {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .block3__description-text {
+    width: 461px;
+    height: 134px;
+    margin-bottom: 40px;
+  }
+
+  .block3__image2 {
+    display: block;
+    margin-bottom: 38px;
+  }
+
+  .block3__image {
+    display: none;
+  }
+
+  .block3__button {
+    width: 385px;
+    height: 71px;
+    background: url(./img/mainPage/main_button2.png);
+    font-size: 30px;
+    margin-left: 133px;
+  }
+  .main__block4 {
+    height: 820px;
+    top: 3108px;
+  }
+  .block4__contact-info {
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    padding-right: 180px;
+    padding-left: 180px;
+    box-sizing: border-box;
+  }
+
+  .contact-info-block {
+    height: 320px;
+    margin-bottom: 60px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .main {
+    width: 280px;
+    height: 1088px;
+  }
+  .main__block1 {
+    top: -27px;
+    height: 170px;
+  }
+
+  .outside__block1 {
+    padding-top: 12px;
+  }
+
+  .block1__main-text {
+    font-size: 12px;
+    width: 183px;
+    height: 26px;
+    margin-bottom: 10px;
+  }
+
+  .block1__description-text {
+    font-size: 11px;
+    width: 211px;
+    height: 38px;
+    margin-bottom: 11px;
+  }
+
+  .block1__main-image {
+    width: 250px;
+    height: 133px;
+  }
+  .main__block2 {
+    height: 612px;
+    top: 132px;
+  }
+
+  .outside__block2 {
+    padding-top: 83px;
+  }
+
+  .block2__main-text {
+    font-size: 11px;
+    width: 110px;
+    text-align: center;
+    height: 12px;
+    margin-bottom: 9px;
+  }
+
+  .block2__buy-options {
+    height: 490px;
+  }
+  .buy-img2 {
+    width: 250px;
+    height: 130px;
+  }
+
+  .block2__buy-item {
+    width: 180px;
+    height: 149px;
+  }
+
+  .buy-description {
+    width: 180px;
+    height: 40px;
+    font-size: 11px;
+  }
+
+  .main__block3 {
+    height: 280px;
+    top: 741px;
+  }
+
+  .outside__block3 {
+    padding-top: 10px;
+  }
+
+  .block3__main-text {
+    font-size: 11px;
+    width: 100px;
+    height: 11px;
+    margin-bottom: 10px;
+  }
+
+  .block3__description-text {
+    width: 228px;
+    font-size: 11px;
+    height: 34px;
+    margin-bottom: 20px;
+  }
+
+  .block3__image2 {
+    width: 250px;
+    height: 127px;
+    margin-bottom: 15px;
+  }
+
+  .block3__button {
+    width: 120px;
+    height: 30px;
+    background: url(./img/mainPage/main_button3.png);
+    font-size: 10px;
+    margin-left: 65px;
+  }
+  .main__block4 {
+    height: 100px;
+    top: 1008px;
+  }
+  .block4__contact-info {
+    display: flex;
+    flex-direction: row;
+    padding-top: 15px;
+    padding-right: 39px;
+    padding-left: 39px;
+  }
+
+  .contact-info-block {
+    height: 76px;
+    width: 196px;
+  }
+  .block4__icon {
+    width: 25px;
+    height: 25px;
+  }
+  .block4__text1 {
+    width: 87px;
+    height: 8px;
+    font-size: 8px;
+    text-align: center;
+  }
+  .block4__text2 {
+    width: 69px;
+    height: 23px;
+    text-align: center;
+    font-size: 7px;
   }
 }
