--- a/styles.css
+++ b/styles.css
@@ -129,5 +129,154 @@ body {
   display: none;
 }
 
+.footer__hidden-menu {
+  display: none;
+}
+
 @media only screen and (max-width: 1290px) {
+  .header {
+    height: 250px;
+  }
+  .outside__container {
+    width: 720px;
+    padding-left: 33px;
+    padding-right: 33px;
+  }
+  .header__container {
+    width: 654px;
+    height: 170px;
+    flex-wrap: wrap;
+  }
+  .logo-name {
+    font-size: 30px;
+    width: 184px;
+    height: 62px;
+    margin-top: 40px;
+  }
+  .header__hidden-menu {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin-top: 52px;
+  }
+  .header__icons {
+    display: none;
+  }
+  .header__links {
+    margin-top: 0;
+    width: 654px;
+    align-items: center;
+    height: 28px;
+    margin-top: 40px;
+  }
+  .logo-image {
+    width: 75px;
+    height: 62px;
+  }
+  .name {
+    right: 18px;
+    top: 3px;
+  }
+  .inside__container {
+    width: 654px;
+  }
+  .footer {
+    height: 200px;
+    top: 4091px;
+  }
+
+  .footer__container {
+    width: 654px;
+  }
+
+  .footer__icon {
+    width: 35px;
+    margin-right: 20px;
+    height: 35px;
+  }
+  .footer__social-icons {
+    width: 90px;
+    height: 50px;
+    margin-top: 80px;
+  }
+
+  .footer__links {
+    width: 294px;
+    margin-top: 60px;
+  }
+
+  .footer__logo-name {
+    width: 184px;
+    height: 62px;
+    margin-top: 80px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .header {
+    height: 75px;
+  }
+  .outside__container {
+    width: 280px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .header__container {
+    width: 250px;
+    flex-wrap: wrap;
+  }
+  .logo-name {
+    font-size: 16px;
+    width: 95px;
+    height: 25px;
+    margin-top: 13px;
+  }
+  .header__hidden-menu {
+    width: 20px;
+    height: 20px;
+    margin-top: 18px;
+  }
+
+  .header__links {
+    display: none;
+  }
+  .logo-image {
+    width: 30px;
+    height: 25px;
+  }
+  .name {
+    right: 10px;
+    top: 2px;
+  }
+  .inside__container {
+    width: 250px;
+  }
+  .footer {
+    height: 75px;
+    top: 1163px;
+  }
+
+  .footer__container {
+    width: 250px;
+  }
+
+  .footer__social-icons {
+    display: none;
+  }
+
+  .footer__links {
+    display: none;
+  }
+
+  .footer__logo-name {
+    width: 93px;
+    height: 25px;
+    margin-top: 20px;
+  }
+  .footer__hidden-menu {
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin-top: 20px;
+  }
 }
